# uiwrap

./: .clang-tidy  .envrc  .gitignore  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CppCheckSuppressions.txt  README.md  boost.cmake  clangformat.sh  conanfile.txt  cppenv-nix-conan.json  defaults.cmake  fetchcontent-lockfile.json  flake.nix  qt.cmake  qtdeploy_autodepends_bin_win_uiwraptest.bat  qtdeploy_autodepends_bindbg_win_uiwraptest.bat  uiwrap_build_config.h.in  uiwrap_build_config.hpp.in
.cursor/rules/: uiwrap.mdc
.github/: dependabot.yml
.github/ci/: install-test-setup.sh
.github/workflows/: build-and-test-with-boost.yml  build.yml  ci.yml  clang-tidy.yml  cppcheck.yml  preset-test-with-boost.yml
cmake/: dependencies.cmake  mb.uiwrap-config.cmake.in
cmake_util/: toolib.cmake  util.cmake
conan/profiles/: linux-clang-debug  linux-clang-libcxx-debug  linux-clang-libcxx-release  linux-clang-release  linux-gcc-debug  linux-gcc-release  macos-appleclang-debug  macos-appleclang-release
doc/: architecture.graphml  readme.txt
include/: uiwrapDEF.h
include/mb/uiwrap/: CMakeLists.txt  config.h  config.hpp  config_gen.hpp.in  export_non_copyable.h  export_non_copyable.hpp  uiwrapDEF.h  uiwrapDEF.hpp
include/mb/uiwrap/GUI/: resource_string.h  resource_string.hpp  resources.h  resources.hpp
include/mb/uiwrap/GUI/impl_Qt/: cppmodel2qml.h  cppmodel2qml.hpp  qmlextlib.cpp  qmlextlib.h  qmlextlib.hpp  qmlextlib.qml
include/mb/uiwrap/filesys/: filesys.h  filesys.hpp
include/mb/uiwrap/fundamental_types/impl_Qt/: convert_Qt.h  convert_Qt.hpp
include/mb/uiwrap/linklib/: LINKLIB_DEFS.h  LINKLIB_DEFS.hpp  library_interface.h  library_interface.hpp
include/mb/uiwrap/linklib/impl_/: LINKLIB_DEFS_.h  LINKLIB_DEFS_.hpp
include/mb/uiwrap/linklib/impl_Qt/: LINKLIB_DEFS_Qt.h  LINKLIB_DEFS_Qt.hpp
include/mb/uiwrap/messagebox/: messagebox.h  messagebox.hpp
include/mb/uiwrap/programsettings/: programsettings.h  programsettings.hpp
include/mb/uiwrap/string/impl_Qt/: language_id_convert_Qt.h  language_id_convert_Qt.hpp  stringconvert_Qt.h  stringconvert_Qt.hpp  urlstring_util_Qt.h  urlstring_util_Qt.hpp
include/mb/uiwrap/util/: util.h  util.hpp
include/uiwrap/: CMakeLists.txt  config.h  config_gen.h.in  export_non_copyable.h  uiwrapDEF.h
include/uiwrap/GUI/: resource_string.h  resources.h
include/uiwrap/GUI/impl_Qt/: cppmodel2qml.h  cppmodel2qml.test.cpp  qmlextlib.h  qmlextlib.qml
include/uiwrap/filesys/: filesys.h  filesys.test.cpp
include/uiwrap/fundamental_types/impl_Qt/: convert_Qt.h  convert_Qt.test.cpp
include/uiwrap/linklib/: LINKLIB_DEFS.h  library_interface.h
include/uiwrap/linklib/impl_/: LINKLIB_DEFS_.h
include/uiwrap/linklib/impl_Qt/: LINKLIB_DEFS_Qt.h
include/uiwrap/messagebox/: messagebox.h
include/uiwrap/programsettings/: programsettings.h
include/uiwrap/string/impl_Qt/: StringConvert_Qt.h  UrlString_util_Qt.h  UrlString_util_Qt.test.cpp  language_id_convert_Qt.h  language_id_convert_Qt.test.cpp  stringconvert_Qt.h  urlstring_util_Qt.h  urlstring_util_Qt.test.cpp
include/uiwrap/util/: util.h
src/: CMakeLists.txt
src/GUI/impl_Qt/: cppmodel2qml.test.cpp  qmlextlib.test.cpp
src/filesys/: filesys.cpp  filesys.test.cpp
src/filesys/impl_/: FileSys_.cpp  filesys_.cpp  filesys_.h  filesys_.hpp
src/filesys/impl_Qt/: FileSys_Qt.cpp  filesys_Qt.cpp  filesys_Qt.h  filesys_Qt.hpp
src/fundamental_types/impl_Qt/: convert_Qt.test.cpp
src/linklib/: linklib.cpp
src/linklib/impl_/: library_.h  library_.hpp
src/linklib/impl_Qt/: library_Qt.h  library_Qt.hpp
src/messagebox/: messagebox.cpp
src/messagebox/impl_/: messagebox_.cpp  messagebox_.h  messagebox_.hpp  messagebox_.test.cpp
src/messagebox/impl_Qt/: MessageBox_Qt.cpp  MessageBox_Qt.h  MessageBox_Qt.hpp
src/programsettings/: programsettings.cpp
src/programsettings/impl_/: ProgSettings_.cpp  ProgSettings_.h  ProgSettings_.hpp
src/programsettings/impl_Qt/: ProgSettings_Qt.cpp  ProgSettings_Qt.h  ProgSettings_Qt.hpp
src/string/impl_Qt/: StringConvert_Qt.h  language_id_convert_Qt.test.cpp  urlstring_util_Qt.test.cpp
test/filesys/: filesys.test.cpp
